# aptly

./: .env.example  .gitignore  .ralphrc  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SPEC.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  railway.toml  requirements.txt
.claude/skills/implement/: SKILL.md
.claude/skills/plan-next/: SKILL.md
.ralph/: .circuit_breaker_state  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralph/specs/: comprehensive-documentation.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: README.md  authentication.mdx  faq.mdx  introduction.mdx  mdx-components.tsx  mint.json  next.config.js  package-lock.json  package.json  quickstart.mdx  theme.config.tsx  troubleshooting.mdx  vercel.json
docs-old/: authentication.mdx  mint.json
docs-old/api/admin/: get-customer.mdx
docs-old/api/analytics/: pii.mdx  usage.mdx
docs-old/deployment/: local-development.mdx
docs/api/: chat-completions.mdx  health.mdx
docs/api/admin/: create-api-key.mdx  create-customer.mdx  get-customer.mdx  list-customers.mdx
docs/api/audit-logs/: get-log.mdx  query-logs.mdx
docs/api/customer/: create-key.mdx  get-profile.mdx  list-keys.mdx  revoke-key.mdx  update-settings.mdx
docs/components/: Accordion.tsx  Callout.tsx  Card.tsx  Check.tsx  CodeGroup.tsx  Expandable.tsx  ResponseExample.tsx
docs/deployment/: architecture.mdx  local-development.mdx  production.mdx
docs/guides/: compliance.mdx  index.mdx  pii-redaction.mdx  rate-limiting.mdx  streaming.mdx
docs/pages/: _app.tsx  faq.mdx  index.mdx  troubleshooting.mdx
docs/pages/api-reference/: _meta.json.bak  chat-completions.mdx
docs/pages/guides/: pii-redaction.mdx
docs/styles/: globals.css
examples/: demo.py
project-docs/analysis/: 2026-02-18-framework-entities-analysis.md
project-docs/prds/: 2026-01-26-mvp-middleware-api.md  2026-01-26-streaming-response-tests.md  2026-01-26-test-infrastructure-setup.md  2026-01-27-production-deployment.md  2026-01-27-response-pii-detection.md  2026-01-31-customer-analytics-api.md  2026-02-17-custom-mdx-docs.md  2026-02-18-framework-specific-entities.md  2026-02-19-customer-dashboard.md
project-docs/work-summaries/: 2026-01-26-mvp-middleware-api.md  2026-01-26-streaming-response-tests.md  2026-01-26-test-infrastructure-setup.md  2026-01-27-production-deployment.md  2026-01-27-response-pii-detection.md  2026-02-04-customer-analytics-api.md  2026-02-17-custom-mdx-docs.md  2026-02-19-customer-dashboard.md  2026-02-19-framework-specific-entities.md
scripts/: smoke_test.py  verify_deployment.sh
src/: __init__.py  analytics.py  auth.py  cli.py  config.py  db.py  llm_router.py  main.py  models.py  rate_limiter.py  supabase_client.py
src/compliance/: __init__.py  audit_logger.py  custom_recognizers.py  framework_entities.py  pii_redactor.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260126000000_initial_schema.sql  20260127000000_response_pii.sql  20260219000000_add_users_table.sql
tests/: __init__.py  conftest.py  test_admin_endpoints.py  test_analytics.py  test_audit_logs.py  test_auth.py  test_chat_completions.py  test_custom_recognizers.py  test_customer_endpoints.py  test_framework_entities.py  test_health.py  test_pii_detection.py  test_rate_limiting.py
web/: .env.local.example  .gitignore  README.md  mdx-components.js  mdx-components.tsx  mdx-config.mjs  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.js  theme.config.tsx  vercel.json
web/app/: global.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx  (+1 more)
web/components/: Accordion.tsx  AnimatedCodeDemo.tsx  Callout.tsx  Card.tsx  CardGroup.tsx  Check.tsx  CodeBlock.tsx  CodeGroup.tsx  Expandable.tsx  ParamField.tsx  ResponseExample.tsx  ResponseField.tsx  TableOfContents.tsx  Tip.tsx  index.ts
web/lib/: aptly-api.ts  auth.ts
web/pages/: _app.tsx  index.tsx
web/public/: api-docs.html
web/styles/: globals.css
(+73 files in other folders)
